--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nwb",
   "description": "A toolkit for React, Preact & Inferno apps, React libraries and other npm modules for the web, with no configuration (until you need it)",
-  "version": "0.23.0",
+  "version": "0.24.0",
   "license": "MIT",
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "bin": {
@@ -45,7 +45,6 @@
     "run-series": "1.1.8",
     "semver": "5.5.1",
     "webpack-merge": "4.1.4",
-
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-plugin-add-module-exports": "0.2.1",
@@ -73,8 +72,7 @@
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
     "redbox-noreact": "1.1.0",
-
-    "karma": "3.0.0",
+    "karma": "3.1.4",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
     "karma-mocha": "1.3.0",
@@ -83,14 +81,11 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "3.0.5",
     "phantomjs-prebuilt": "2.1.16",
-
     "mocha": "5.2.0",
     "expect": "1.20.2",
-
     "object-assign": "4.1.1",
     "promise": "8.0.2",
     "whatwg-fetch": "3.0.0",
-
     "webpack": "4.20.2",
     "autoprefixer": "9.1.5",
     "babel-loader": "7.1.5",
@@ -108,7 +103,7 @@
     "url-loader": "1.1.1",
     "terser-webpack-plugin": "1.1.0",
     "webpack-dev-middleware": "3.4.0",
-    "webpack-dev-server": "3.1.9",
+    "webpack-dev-server": "3.1.14",
     "webpack-hot-middleware": "2.24.2"
   },
   "devDependencies": {
@@ -138,12 +133,15 @@
   "babel": {
     "presets": [
       "flow",
-      ["env", {
-        "loose": true,
-        "targets": {
-          "node": "6.11.5"
+      [
+        "env",
+        {
+          "loose": true,
+          "targets": {
+            "node": "6.11.5"
+          }
         }
-      }],
+      ],
       "stage-2"
     ],
     "plugins": [
@@ -152,9 +150,12 @@
     "env": {
       "test": {
         "plugins": [
-          ["istanbul", {
-            "include": "src"
-          }]
+          [
+            "istanbul",
+            {
+              "include": "src"
+            }
+          ]
         ]
       }
     }
